<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Registration">

    <View
        android:id="@+id/background"
        android:layout_width="443dp"
        android:layout_height="260dp"
        android:layout_marginBottom="64dp"
        android:background="?attr/colorPrimaryVariant"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="120dp"
        android:src="@drawable/find_my_classmate"
        app:layout_constraintBottom_toBottomOf="@+id/background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/registrationtext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="Registration"
        android:textSize="25sp"
        android:layout_marginBottom="20dp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/background"

        tools:ignore="MissingConstraints" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/registrationtext"
        tools:ignore="MissingConstraints">


    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/idid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:hint="id"

        app:layout_constraintTop_toBottomOf="@+id/registrationtext"
        tools:layout_editor_absoluteX="0dp" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/passwordpassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="password"

        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="343dp"
        app:layout_constraintTop_toBottomOf="@+id/idid"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/btn_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Register"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="247dp"
        app:layout_constraintTop_toBottomOf="@+id/passwordpassword"
        tools:layout_editor_absoluteY="396dp" />


</androidx.constraintlayout.widget.ConstraintLayout>
